Update scrollbar `z-index` to fix iOS sticky header bug

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -5,7 +5,7 @@ $folder-padding: 1.5rem
 $folder-dim: 6rem
 $scrollbar-color-thumb: rgba(255, 255, 255, 0.35)
 $scrollbar-color-track: rgba(255, 255, 255, 0.075)
-$scrollbar-width-legacy: 1.5rem
+$scrollbar-width: 1.5rem
 $width-threshold: 530px
 $threshold-diff: 43px // 35, 37, 40, 43
 
@@ -58,8 +58,9 @@ main
     background: $scrollbar-color-track
 
   ::-webkit-scrollbar
-    max-width: $scrollbar-width-legacy
-    max-height: $scrollbar-width-legacy
+    z-index: 2 // Fixes the scrollbar being hidden behind notes sticky header
+    max-width: $scrollbar-width
+    max-height: $scrollbar-width
 
 body
   display: -webkit-box
